--- a/TransportationsProject/Info.plist
+++ b/TransportationsProject/Info.plist
@@ -41,5 +41,11 @@
 	</array>
 	<key>isMock</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Geogrotesque-Regular.otf</string>
+		<string>Geogrotesque-Medium.otf</string>
+		<string>Geogrotesque-Bold.otf</string>
+	</array>
 </dict>
 </plist>
