Added mock query items as a constants

--- a/TransportationsProject/Info.plist
+++ b/TransportationsProject/Info.plist
@@ -40,7 +40,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>isMock</key>
-	<true/>
+	<false/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Geogrotesque-Regular.otf</string>
